# routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\Auth\LogoutController;
 use App\Http\Controllers\QrCodeController;
 use App\Http\Controllers\QrExcelController;
+use App\Http\Controllers\ExcelController;
 
 Route::post('/register', [RegisterController::class, 'register']);
 Route::post('/login', [LoginController::class, 'login']);
@@ -20,15 +21,15 @@ Route::middleware('auth:sanctum')->group(function () {
 
 Route::get('/qr-code', [QrCodeController::class, 'show']);
 
-Route::get('/import-qrcode', [QrExcelController::class, 'import']);
-
-
-Route::get('/dechiffrer', [QrExcelController::class, 'formDechiffrement']);
-Route::post('/dechiffrer', [QrExcelController::class, 'dechiffrer']);
-
-
-Route::get('/auth/google', [LoginController::class, 'redirectToGoogle'])->name('auth.google');
-Route::get('/auth/google/callback', [LoginController::class, 'handleGoogleCallback']);
 
 
 
+Route::post('/upload-excel', [ExcelController::class, 'uploadAndParse']);
+Route::post('/generate-qrcodes', [ExcelController::class, 'generateQRCodes']);
+
+Route::post('/generate-pdf', [ExcelController::class, 'generatePDF']);
+
+
+
+
+// Pour afficher les QR codes générés à partir du contenu Excel
